<resources>
    <string name="app_name">Motivator</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="name">Name</string>
    <string name="title_activity_delete_page">DeletePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="number">№</string>
    <string name="delete">Delete</string>
    <string name="your_notes">Your Notes</string>
</resources>